# finledger

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Justfile  LICENSE-MIT  README.md  docker-compose.prod.yml  docker-compose.yml  finledger.postman_collection.json
.github/workflows/: ci.yml
.zed/: debug.json  start-stack.sh
docker/backend/: Dockerfile
docker/caddy/: Caddyfile
docker/grafana/dashboards/: finledger-http.json  finledger-infra.json
docker/postgres/: apply-migrations.sh  bi.sql  init.sql  prod-roles.sh  seed_demo.sql
docker/postgres/migrations/: 001_custos_fixos.sql  002_arquivamento.sql  006_marca_fonte.sql  (+20 more)
docker/prometheus/: prometheus.prod.yml  prometheus.yml
docker/telegraf/: telegraf.conf
docs/: calculo_de_impostos.md
frontend/: Dockerfile  components.json  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/app/: app.vue
frontend/tests/: ui-smoke.mjs
scripts/: .deploy.env.example  deploy.py
src/: arquivamento.rs  error.rs  lib.rs  main.rs
src/auth/: jwt.rs  middleware.rs  mod.rs
src/backoffice/: domain.rs  handlers.rs  mod.rs  repository.rs
src/bi/: job.rs  mod.rs  outbox.rs
src/bootstrap/: database.rs  events.rs  handlers.rs  mod.rs  outbox_relay.rs  projections.rs  repositories.rs  seed.rs
src/projections/: catalogo.rs  compras.rs  crm.rs  estoque.rs  financeiro.rs  fiscal.rs  fornecedores.rs  identity.rs  mod.rs  orcamentos.rs  vendas.rs
src/shared/: mod.rs  tenant.rs  tenant_repository.rs
src/tenants/: repository.rs
src/web/: error.rs  mod.rs  state.rs
tests/: backoffice_crud.rs  catalogo_crud.rs  compras_crud.rs  crm_crud.rs  cross_bc_integration.rs  estoque_crud.rs  financeiro_crud.rs  fiscal_integration.rs  fiscal_motor_tributario.rs  fornecedores_crud.rs  helpers.rs  identity_crud.rs  lixeira_arquivamento.rs  orcamentos_crud.rs  precificacao_bi.rs  projections_integration.rs  tenant_isolation.rs  vendas_crud.rs
(+328 files in other folders)
